--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="style.css">
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="img\favicon.png"/>
+    <!--REMIXICONS-->
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+    
+    <title>JOB PORTAL</title>
 </head>
 <body>
-    
-</body>
-</html>
+   <!--HEADER--> 
+ <header class="header" id="head">
+    <nav class="nav container">
+      <a href="#" class="nav__logo">CHAKRI.com</a>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link active-link">Home</a>
+          </li>
+          <li class="nav__item">
+           <a href="#about" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#popular" class="nav__link">Company</a>
+          </li>
+          <li class="nav__item">
+            <a href="#explore" class="nav__link">Browse</a>
+          </li>  
+        </ul>
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
+          </div>
+      </div> 
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-line"></i>
+        </div>       
+    </nav>
+ </header>
+
+ <!-- HOME -->
+
+
+ <!--MAIN JS-->
+ <script src="main.js"></script>
