--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
           <li class="nav__item">
             <a href="#explore" class="nav__link">Browse</a>
           </li>  
+          <li class="nav__item">
+            <a href="/login2.html" class="nav__link">Login</a>
+          </li>
+            </div>
         </ul>
-          <div class="nav__close" id="nav-close">
-            <i class="ri-close-line"></i>
           </div>
       </div> 
         <div class="nav__toggle" id="nav-toggle">
           <i class="ri-menu-line"></i>
-        </div>       
+        </div> 
+              
     </nav>
  </header>
 
