--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#explore" class="nav__link">Explore</a>
           </li>
           <li class="nav__item">
-            <a href="/login2.html" class="nav__link">Login</a>
+            <a href="/login/login2.html" class="nav__link">Login</a>
           </li>  
         </ul>
           <div class="nav__close" id="nav-close">
